<resources>
    <string name="app_name">Ditapp</string>
    <string name="actionbar_name"> Ditapp</string>
    <string name="action_settings">Settings</string>
    <string name="label_disclaimer">APD Fintech BCH 2015</string>

    <!-- MainActivity -->
    <string name="main_text_loading">Cargando</string>

    <!-- LoginActivity -->
    <string name="login_title">Login</string>
    <string name="login_hint_rut">Rut</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_text_password_error">Contraseña incorrecta</string>
    <string name="login_text_rut_empty">Rut vacío</string>
    <string name="login_rut_email_error">Rut inválido</string>
    <string name="login_text_account_banned">Cuenta baneada</string>
    <string name="login_error">Error en la cuenta</string>
    <string name="login_text_account_error">Error en la cuenta</string>


    <string name="login_error_not_registered">Usuario no registrado.</string>
    <string name="login_error_not_client">El cliente no esta registrado.</string>
    <string name="login_error_no_discapacitado">Usuario no discapacitado</string>
    <string name="login_error_invalid_pass">Contraseña incorrecta</string>
    <string name="login_error_invalida_account">Usuario/Contraseña invalida</string>

    <string name="login_create_user">No soy cliente</string>
    <string name="login_text_login">Login</string>
    <string name="login_button_login">Login</string>
    <string name="title_activity_menu">MenuActivity</string>


    <!-- CreateUserActivity -->
    <string name="create_user_email">Correo</string>
    <string name="create_user_phone">Telefono Celular</string>
    <string name="create_user_name">Nombre:</string>
    <string name="create_user_rut">Rut:</string>

    <string name="create_user_confirm">Confirmar</string>
    <string name="create_user_scan">Escanear Cedula</string>
    <string name="create_user_barcode_scan_prompt">Lee el reverso de tu carnet</string>

    <string name="create_user_error_title">Error</string>
    <string name="create_user_error_no_email">Email es obligatorio</string>
    <string name="create_user_error_no_valid_email">Email no es valido</string>
    <string name="create_user_error_no_phone">Telefono es obligatorio</string>
    <string name="create_user_error_no_rut">Rut es obligatorio</string>


    <!-- ConfirmarActivity -->
    <string name="confirmar_text_tramite">Tramite</string>
    <string name="confirmar_text_sucursal">Sucursal</string>
    <string name="confirmar_text_hora">Hora de salida</string>
    <string name="confirmar_text_ahora">Ahora</string>
    <string name="confirmar_button_hora">Hr</string>
    <string name="confirmar_button_confirmar">Confirmar</string>

    <!-- MenuActivity -->
    <string name="menu_logout">Logout</string>
    <string name="menu_tramite">Solicitar Tramite</string>
    <string name="menu_notification">Notificaciones</string>
    <string name="menu_cancelar_tramite">Cancelar tramite</string>
    <string name="menu_icon_tramite">{fa-bank}</string>
    <string name="menu_icon_notification">{fa-bullhorn}</string>

    <!--AdminNotificationActivity -->
    <string name="actionbar_admin_notification">Ditapp Admin</string>

</resources>
