<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="40dp"
    tools:context="cl.apd.ditapp.ui.main.LoginActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_launcher2"
        />

    <EditText
        android:id="@+id/rutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/login_hint_rut"
        android:gravity="center"

        android:text="164361756"
        />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/login_hint_password"
        android:layout_below="@id/rutText"
        android:inputType="textPassword"
        android:gravity="center"

        android:text="SyKi8g1T"
        />

    <Button
        style="@style/btn_bch"
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordText"
        android:text="@string/login_button_login"
        android:onClick="onClickStep1"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:layout_marginTop="10dp"

        android:id="@+id/ll_sin_cuenta"
        android:onClick="onClickCreateUser">
        <TextView
            android:id="@+id/createBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"


            android:textColor="@color/bch_blue"
            android:gravity="center"
            android:text="@string/login_create_user"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_sin_cuenta"
        android:layout_marginTop="10dp"

        android:onClick="onClickHelp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"


            android:textColor="@color/bch_blue"
            android:gravity="center"
            android:text="Ayuda en linea"
            />
    </LinearLayout>




    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/label_disclaimer"
        android:textAppearance="?android:attr/textAppearanceSmall" />


</RelativeLayout>
